# CV-Explorations

./: CMakeLists.txt
basic_data_measures/: main.cpp
data_measure_img_seq/: main.cpp  matplotlibcpp.h
examples/: CMakeLists.txt
examples/image_processing/: corner_detector.cpp  edge_detector.cpp  histogram_equalization.cpp  linear_scaling.cpp  playground.cpp  sharpening.cpp  smoothing.cpp
src/: CMakeLists.txt
src/basic_data_measures/: CMakeLists.txt  main.cpp
src/data_measure_img_seq/: CMakeLists.txt  main.cpp
src/image_processing/: CMakeLists.txt  corner_detector.cpp  corner_detector.hpp  edge_detector.cpp  edge_detector.hpp  histogram_equalization.cpp  histogram_equalization.hpp  linear_scaling.cpp  linear_scaling.hpp  sharpening.cpp  sharpening.hpp  smoothing.cpp  smoothing.hpp
src/metrics/: CMakeLists.txt  metrics.cpp  metrics.hpp
src/utils/: CMakeLists.txt  load_resource.cpp  load_resource.hpp
